# Chess

./: .gitignore  CMakeLists.txt  Chess.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
headers/: Chess.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/: desk.txt
resources/shaders/: fSprite.txt  fragment_shader.glsl  fragment_shader.txt  vSprite.txt  vertex_shader.glsl  vertex_shader.txt
src/: Chess.cpp  main.cpp
src/ChessEngine/: Bitboard.cpp  ChessEngine.cpp  Pieces.cpp
src/ChessEngine/headers/: Bitboard.h  ChessEngine.h  Pieces.h
src/Game/: Game.cpp
src/Game/headers/: Game.h
src/Graphics/: ShaderProgram.cpp  Sprite.cpp  Texture.cpp
src/Graphics/headers/: ShaderProgram.h  Sprite.h  Texture.h
src/Helper/: ChessHelper.cpp  FiguresName.cpp  getShader.cpp
src/Helper/headers/: ChessHelper.h  FiguresName.h  getShader.h
src/Logic/: Logic.cpp
src/Logic/headers/: Logic.h
src/Render/: ShaderProgram.cpp  Sprite.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Render/headers/: ShaderProgram.h  Sprite.h  Texture2D.h  VertexArray.h  VertexBuffer.h
src/Resources/: Figures.cpp  ResourceManager.cpp
src/Resources/headers/: Figures.h  ResourceManager.h
